corrijo aporte EA3 en envios pagos y pedidos